# libusbcpp

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
cmake/: libusb.cmake
examples/: CMakeLists.txt
examples/find_device/: CMakeLists.txt  find_device.cpp
examples/hotplug/: CMakeLists.txt  hotplug.cpp
examples/simple_scan/: CMakeLists.txt  simple_scan.cpp
include/: libusbcpp.h  magic_enum.hpp
libusb/: config.h.in
src/: libusbcpp.cpp  log.h
